--- a/onnx/zipa_export_colab.ipynb
+++ b/onnx/zipa_export_colab.ipynb
@@ -30,17 +30,35 @@
   },
   {
    "cell_type": "code",
-   "source": "%%bash\n# Sync from GitHub\nif [ ! -d \"pp\" ]; then\n    git clone https://github.com/guettli/pp.git\n    echo \"Cloned pp repo\"\nelse\n    cd pp && git pull\n    echo \"Updated pp repo\"\nfi",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Sync from GitHub\n",
+    "if [ ! -d \"pp\" ]; then\n",
+    "    git clone https://github.com/guettli/pp.git\n",
+    "    echo \"Cloned pp repo\"\n",
+    "else\n",
+    "    cd pp && git pull\n",
+    "    echo \"Updated pp repo\"\n",
+    "fi"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Check GPU availability (without importing torch yet)\nimport subprocess\nresult = subprocess.run(['nvidia-smi', '--query-gpu=name', '--format=csv,noheader'], \n                       capture_output=True, text=True)\nif result.returncode != 0:\n    raise RuntimeError(\"No GPU found! Go to Runtime → Change runtime type → T4 GPU\")\nprint(f\"GPU: {result.stdout.strip()}\")"
+   "source": [
+    "# Check GPU availability (without importing torch yet)\n",
+    "import subprocess\n",
+    "result = subprocess.run(['nvidia-smi', '--query-gpu=name', '--format=csv,noheader'],\n",
+    "                       capture_output=True, text=True)\n",
+    "if result.returncode != 0:\n",
+    "    raise RuntimeError(\"No GPU found! Go to Runtime → Change runtime type → T4 GPU\")\n",
+    "print(f\"GPU: {result.stdout.strip()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,21 +72,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "%%bash\n\n# Check if already installed correctly\npython -c \"import torch; assert torch.__version__.startswith('2.4.0')\" 2>/dev/null && {\n    echo \"PyTorch 2.4.0 already installed, skipping...\"\n    exit 0\n}\n\n# Bash Strict Mode\ntrap 'echo -e \"\\n🤷 🚨 🔥 Warning: A command has failed. Exiting the script. Line was ($0:$LINENO): $(sed -n \"${LINENO}p\" \"$0\" 2>/dev/null || true) 🔥 🚨 🤷 \"; exit 3' ERR\nset -Eeuo pipefail\n\necho \"=== Uninstalling incompatible packages ===\"\npip uninstall -y k2 torch torchaudio torchvision 2>/dev/null || true\n\necho \"=== Installing PyTorch 2.4.0 + CUDA 12.4 ===\"\npip install torch==2.4.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu124\n\necho \"=== Installing k2 ===\"\npip install k2==1.24.4.dev20241030+cuda12.4.torch2.4.0 -f https://k2-fsa.github.io/k2/cuda.html\n\necho \"=== Installing icefall and other dependencies ===\"\npip install git+https://github.com/k2-fsa/icefall.git\npip install lhotse --no-deps\npip install cytoolz intervaltree lilcom audioread soundfile\npip install sentencepiece onnx onnxruntime\n\necho \"\"\necho \"=== Dependencies installed! ===\"\necho \"=== Runtime will restart in next cell. Then re-run all cells. ===\""
-  },
-  {
-   "cell_type": "code",
-   "source": "# Restart runtime to load new PyTorch version (skips if already correct)\nimport torch\nif not torch.__version__.startswith('2.4.0'):\n    print(\"Restarting runtime to load PyTorch 2.4.0...\")\n    print(\"After restart, click 'Runtime → Run all' again.\")\n    import os\n    os.kill(os.getpid(), 9)\nelse:\n    print(f\"PyTorch {torch.__version__} already loaded, no restart needed.\")",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# Check if already installed correctly\n",
+    "python -c \"import torch; assert torch.__version__.startswith('2.4.0')\" 2>/dev/null && {\n",
+    "    echo \"PyTorch 2.4.0 already installed, skipping...\"\n",
+    "    exit 0\n",
+    "}\n",
+    "\n",
+    "# Bash Strict Mode\n",
+    "trap 'echo -e \"\\n🤷 🚨 🔥 Warning: A command has failed. Exiting the script. Line was ($0:$LINENO): $(sed -n \"${LINENO}p\" \"$0\" 2>/dev/null || true) 🔥 🚨 🤷 \"; exit 3' ERR\n",
+    "set -Eeuo pipefail\n",
+    "\n",
+    "echo \"=== Uninstalling incompatible packages ===\"\n",
+    "pip uninstall -y k2 torch torchaudio torchvision 2>/dev/null || true\n",
+    "\n",
+    "echo \"=== Installing PyTorch 2.4.0 + CUDA 12.4 ===\"\n",
+    "pip install torch==2.4.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu124\n",
+    "\n",
+    "echo \"=== Installing k2 ===\"\n",
+    "pip install k2==1.24.4.dev20241030+cuda12.4.torch2.4.0 -f https://k2-fsa.github.io/k2/cuda.html\n",
+    "\n",
+    "echo \"=== Installing icefall and other dependencies ===\"\n",
+    "pip install git+https://github.com/k2-fsa/icefall.git\n",
+    "pip install lhotse --no-deps\n",
+    "pip install cytoolz intervaltree lilcom audioread soundfile\n",
+    "pip install sentencepiece onnx onnxruntime\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"=== Dependencies installed! ===\"\n",
+    "echo \"=== Runtime will restart in next cell. Then re-run all cells. ===\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Verify installations\nimport torch\nimport k2\nprint(f\"PyTorch: {torch.__version__}\")\nprint(f\"k2: {k2.__version__}\")\nprint(f\"CUDA available: {torch.cuda.is_available()}\")"
+   "source": [
+    "# Restart runtime to load new PyTorch version (skips if already correct)\n",
+    "import torch\n",
+    "if not torch.__version__.startswith('2.4.0'):\n",
+    "    print(\"Restarting runtime to load PyTorch 2.4.0...\")\n",
+    "    print(\"After restart, click 'Runtime → Run all' again.\")\n",
+    "    import os\n",
+    "    os.kill(os.getpid(), 9)\n",
+    "else:\n",
+    "    print(f\"PyTorch {torch.__version__} already loaded, no restart needed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify installations\n",
+    "import torch\n",
+    "import k2\n",
+    "print(f\"PyTorch: {torch.__version__}\")\n",
+    "#print(f\"k2: {k2.__version__}\")\n",
+    "print(f\"CUDA available: {torch.cuda.is_available()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,18 +197,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
+    "# Wrap checkpoint in icefall format and download tokenizer\n",
+    "import torch\n",
     "\n",
-    "# Bash Strict Mode\n",
-    "trap 'echo -e \"\\n🤷 🚨 🔥 Warning: A command has failed. Exiting the script. Line was ($0:$LINENO): $(sed -n \"${LINENO}p\" \"$0\" 2>/dev/null || true) 🔥 🚨 🤷 \"; exit 3' ERR\n",
-    "set -Eeuo pipefail\n",
-    "\n",
-    "# Create symlink for export script\n",
-    "ln -sf ../zipa_small_crctc_500000_avg10.pth zipa-export/exp/epoch-999.pt\n",
+    "# Load the direct state dict and wrap it for icefall\n",
+    "checkpoint = torch.load(\"zipa-export/zipa_small_crctc_500000_avg10.pth\", map_location=\"cpu\")\n",
+    "wrapped = {\"model\": checkpoint}\n",
+    "torch.save(wrapped, \"zipa-export/exp/epoch-999.pt\")\n",
+    "print(\"Checkpoint wrapped and saved!\")\n",
     "\n",
     "# Download tokenizer\n",
-    "wget -q https://raw.githubusercontent.com/lingjzhu/zipa/main/ipa_simplified/bpe.model -O zipa-export/bpe.model\n",
-    "echo \"Tokenizer downloaded!\""
+    "import urllib.request\n",
+    "urllib.request.urlretrieve(\n",
+    "    \"https://raw.githubusercontent.com/lingjzhu/zipa/main/ipa_simplified/bpe.model\",\n",
+    "    \"zipa-export/bpe.model\"\n",
+    ")\n",
+    "print(\"Tokenizer downloaded!\")"
    ]
   },
   {
@@ -176,7 +246,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "%%bash\n\n# Bash Strict Mode\ntrap 'echo -e \"\\n🤷 🚨 🔥 Warning: A command has failed. Exiting the script. Line was ($0:$LINENO): $(sed -n \"${LINENO}p\" \"$0\" 2>/dev/null || true) 🔥 🚨 🤷 \"; exit 3' ERR\nset -Eeuo pipefail\n\ncd zipa/zipformer_crctc\n\n# ZIPA small model parameters (from zipa_ctc_inference.py)\npython export-onnx-ctc.py \\\n    --exp-dir ../../zipa-export/exp \\\n    --tokens ../../zipa-export/tokens.txt \\\n    --epoch 999 \\\n    --avg 1 \\\n    --use-averaged-model 0 \\\n    --num-encoder-layers \"2,2,3,4,3,2\" \\\n    --feedforward-dim \"512,768,1024,1536,1024,768\" \\\n    --encoder-dim \"192,256,384,512,384,256\" \\\n    --encoder-unmasked-dim \"192,192,256,256,256,192\" \\\n    --num-heads \"4,4,4,8,4,4\" \\\n    --cnn-module-kernel \"31,31,15,15,15,31\" \\\n    --query-head-dim 32 \\\n    --value-head-dim 12 \\\n    --pos-head-dim 4 \\\n    --pos-dim 48 \\\n    --downsampling-factor \"1,2,4,8,4,2\" \\\n    --causal False \\\n    --use-transducer 0 \\\n    --use-ctc 1\n\necho \"ONNX export complete!\""
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# Bash Strict Mode\n",
+    "trap 'echo -e \"\\n🤷 🚨 🔥 Warning: A command has failed. Exiting the script. Line was ($0:$LINENO): $(sed -n \"${LINENO}p\" \"$0\" 2>/dev/null || true) 🔥 🚨 🤷 \"; exit 3' ERR\n",
+    "set -Eeuo pipefail\n",
+    "\n",
+    "cd zipa/zipformer_crctc\n",
+    "\n",
+    "# ZIPA small model parameters (from zipa_ctc_inference.py)\n",
+    "python export-onnx-ctc.py \\\n",
+    "    --exp-dir ../../zipa-export/exp \\\n",
+    "    --tokens ../../zipa-export/tokens.txt \\\n",
+    "    --epoch 999 \\\n",
+    "    --avg 1 \\\n",
+    "    --use-averaged-model 0 \\\n",
+    "    --num-encoder-layers \"2,2,3,4,3,2\" \\\n",
+    "    --feedforward-dim \"512,768,1024,1536,1024,768\" \\\n",
+    "    --encoder-dim \"192,256,384,512,384,256\" \\\n",
+    "    --encoder-unmasked-dim \"192,192,256,256,256,192\" \\\n",
+    "    --num-heads \"4,4,4,8,4,4\" \\\n",
+    "    --cnn-module-kernel \"31,31,15,15,15,31\" \\\n",
+    "    --query-head-dim 32 \\\n",
+    "    --value-head-dim 12 \\\n",
+    "    --pos-head-dim 4 \\\n",
+    "    --pos-dim 48 \\\n",
+    "    --downsampling-factor \"1,2,4,8,4,2\" \\\n",
+    "    --causal False \\\n",
+    "    --use-transducer 0 \\\n",
+    "    --use-ctc 1\n",
+    "\n",
+    "echo \"ONNX export complete!\""
+   ]
   },
   {
    "cell_type": "markdown",
